--- a/index.html
+++ b/index.html
@@ -448,6 +448,66 @@
     </div>
   </div>
 
+  <!-- Section 队友一直送怎么办 -->
+  <div class="section">
+    <div class="section-tag">队友一直送怎么办</div>
+
+    <div class="screenshot-wrap">
+      <div class="screenshot-label">无辜受害者🌸Xiaomi Mix Fold 3🌸</div>
+      <div class="img-row">
+        <div class="img-item" onclick="openImg('img16.png')">
+          <img src="img16.png">
+          <span>点击放大</span>
+        </div>
+        <div class="img-item" onclick="openImg('img17.png')">
+          <img src="img17.png">
+          <span>点击放大</span>
+        </div>
+        <div class="img-item" onclick="openImg('img18.png')">
+          <img src="img18.png">
+          <span>点击放大</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="screenshot-wrap">
+      <div class="screenshot-label">脑溢血（ps平时吵架用的都是ai）</div>
+      <div class="img-row">
+        <div class="img-item" onclick="openImg('img19.png')">
+          <img src="img19.png">
+          <span>点击放大</span>
+        </div>
+        <div class="img-item" onclick="openImg('img20.png')">
+          <img src="img20.png">
+          <span>点击放大</span>
+        </div>
+        <div class="img-item" onclick="openImg('img21.png')">
+          <img src="img21.png">
+          <span>点击放大</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="screenshot-wrap">
+      <div class="screenshot-label">只能吃阅读软件内置广告蛋糕的小米用户要躲在出租屋里哭哭了😭</div>
+      <div class="img-row">
+        <div class="img-item" onclick="openImg('img22.png')">
+          <img src="img22.png">
+          <span>点击放大</span>
+        </div>
+        <div class="img-item" onclick="openImg('img23.png')">
+          <img src="img23.png">
+          <span>点击放大</span>
+        </div>
+        <div class="img-item" onclick="openImg('img24.png')">
+          <img src="img24.png">
+          <span>点击放大</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <!-- Summary -->
   <div class="summary">
     <div class="summary-item">
