--- a/index.html
+++ b/index.html
@@ -511,11 +511,7 @@
   <div class="section">
     <div class="section-tag">老资历</div>
 
-    <p>中二青少年根号零自称长期参与线下性少数社团工作，接受过性少数科普讲师培训。在给自己亲友洗地的过程中，突然蹦出一句生理性别</p>
-
-    <div class="callout red">
-      青衫aspie的问卷把女性和跨性别女性分开列，创了多少人依然不觉得需要改。现在空口来一句我给性少数线下做过贡献，然后张口还是生理性别。老资历，牛逼。👍
-    </div>
+    <p>中二青少年根号零自称长期参与线下性少数社团工作，接受过性少数科普讲师培训。在给自己亲友洗地的过程中，突然张口一句生理性别。老资历，牛逼。👍</p>
 
     <div class="screenshot-wrap">
       <div class="screenshot-label">截图</div>
