--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       <div class="screenshot-label">三角形的置顶公告</div>
       <img src="img5.png" style="width:65%; cursor:pointer;" onclick="openImg('img5.png')">
       <div style="font-size:12px; color:#999; margin-top:4px;">点击放大</div>
-      <div class="screenshot-note">置顶省流里写有lgbtq+认同的人士……在关注号主前请慎重考虑，挂人时声称酷儿友好但主动把有LGBTQ+认同的人排在不欢迎关注的名单里😂</div>
+      <div class="screenshot-note">置顶省流里写 ‘有lgbtq+认同的人士……在关注号主前请慎重考虑’ ，挂人时声称酷儿友好但主动把有LGBTQ+认同的人排在不欢迎关注的名单里</div>
     </div>
 
     <div class="screenshot-wrap">
@@ -453,7 +453,7 @@
     <div class="section-tag">队友一直送怎么办</div>
 
     <div class="screenshot-wrap">
-      <div class="screenshot-label">无辜受害者🌸Xiaomi Mix Fold 3🌸</div>
+      <div class="screenshot-label">作为无辜受害者的🌸Xiaomi Mix Fold 3🌸</div>
       <div class="img-row">
         <div class="img-item" onclick="openImg('img16.png')">
           <img src="img16.png">
@@ -471,7 +471,7 @@
     </div>
 
     <div class="screenshot-wrap">
-      <div class="screenshot-label">脑溢血（ps平时吵架用的都是ai）</div>
+      <div class="screenshot-label">脑溢血操作2（ps平时吵架用的都是ai）</div>
       <div class="img-row">
         <div class="img-item" onclick="openImg('img19.png')">
           <img src="img19.png">
@@ -489,7 +489,7 @@
     </div>
 
     <div class="screenshot-wrap">
-      <div class="screenshot-label">只能吃阅读软件内置广告蛋糕的小米用户要躲在出租屋里哭哭了😭</div>
+      <div class="screenshot-label">只能吃阅读软件内置广告蛋糕的小米用户要躲在出租屋里哭哭了</div>
       <div class="img-row">
         <div class="img-item" onclick="openImg('img22.png')">
           <img src="img22.png">
@@ -511,7 +511,7 @@
   <div class="section">
     <div class="section-tag">老资历</div>
 
-    <p>中二青少年根号零自称长期参与线下性少数社团工作，接受过性少数科普讲师培训。在给自己亲友洗地的过程中，突然张口一句生理性别。老资历，牛逼。👍</p>
+    <p>中二青少年根号零自称长期参与线下性少数社团工作，接受过性少数科普讲师培训。在给自己亲友洗地的过程中，突然张口来了句生理性别。老资历，牛逼。👍</p>
 
     <div class="screenshot-wrap">
       <div class="screenshot-label">截图</div>
